[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.poetry]
name = "pennylane"
version = "0.35.0-dev"
description = "PennyLane is a Python quantum machine learning library by Xanadu Inc."
authors = ["PennyLaneAI <info@pennylane.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pennylane.ai/"
repository = "https://github.com/PennyLaneAI/pennylane"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pennylane.plugins"]
"default.qubit" = "pennylane.devices:DefaultQubit"
"default.qubit.legacy" = "pennylane.devices:DefaultQubitLegacy"
"default.gaussian" = "pennylane.devices:DefaultGaussian"
"default.clifford" = "pennylane.devices:DefaultClifford"
"default.qubit.tf" = "pennylane.devices.default_qubit_tf:DefaultQubitTF"
"default.qubit.torch" = "pennylane.devices.default_qubit_torch:DefaultQubitTorch"
"default.qubit.autograd" = "pennylane.devices.default_qubit_autograd:DefaultQubitAutograd"
"default.qubit.jax" = "pennylane.devices.default_qubit_jax:DefaultQubitJax"
"default.mixed" = "pennylane.devices.default_mixed:DefaultMixed"
"null.qubit" = "pennylane.devices.null_qubit:NullQubit"
"default.qutrit" = "pennylane.devices.default_qutrit:DefaultQutrit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
numpy = "^1.23"
scipy = "^1.8"
networkx = "^2.6"
rustworkx = "^0.12.1"
autograd = "^1.4"
toml = "^0.10"
appdirs = "^1.3"
semantic-version = ">=2.7"
autoray = ">=0.6.1"
cachetools = "*"
pennylane-lightning = ">=0.34"
requests = "^2.31"
typing_extensions = "^4.5"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.tf]
optional = true

[tool.poetry.group.external]
optional = true

[tool.poetry.group.qcut]
optional = true

[tool.poetry.group.qchem]
optional = true

[tool.poetry.group.data]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.19.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.7.0"
pytest-xdist = ">=2.5.0"
pytest-split = "^0.8"
flaky = ">=3.7.0"
pytest-forked = ">=1.4.0"
pytest-benchmark = ">=4.0.0"
black = ">=21"
tomli = "~2.0.0" # Drop once minimum Python version is 3.11

[tool.poetry.group.ci.dependencies]
cvxpy = "^1.4.1"
cvxopt = "^1.3.2"
matplotlib = "^3.5.0"

[tool.poetry.group.doc.dependencies]
mistune = "0.8.4"
m2r2 = "^0.3.2"
pygments-github-lexers = "^0.0.5"
semantic-version = "2.10"
docutils = "0.16"
sphinx = [
    { version = "~3.5.0", markers = "python_version < '3.10'" },
    { version = "4.2.0", markers = "python_version >= '3.10'" }
]
sphinx-automodapi = "0.13"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-bibtex = "2.4.2"
sphinxcontrib-applehelp = "1.0.4"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-htmlhelp = "2.0.1"
sphinxcontrib-serializinghtml = "1.1.5"
tensornetwork = "0.3"
jinja2 = "3.0.3"
# we do not pin the sphinx theme, to allow the
# navbar and header data to be updated at the source
pennylane-sphinx-theme = "*"
sphinxext-opengraph = "0.6.3" # Note: latest version 0.9.0 requires Sphinx >=4.0
matplotlib = "*"

[tool.poetry.group.jax.dependencies]
jax = "^0.4.14"
jaxlib = "^0.4.14"

[tool.poetry.group.torch.dependencies]
torch = [
    { version = "2.1.0", source = "PyPI", platform = "darwin" },
    { version = "2.1.0+cpu", source = "pytorch-cpu", platform = "!=darwin" },
]

[tool.poetry.group.tf.dependencies]
tensorflow = "^2.15.0"
keras = "^2.15.0"
tensorflow-macos = { version = "^2.15.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }

[tool.poetry.group.external.dependencies]
pyzx = {git = "https://github.com/Quantomatic/pyzx.git", rev = "master"}
matplotlib = "*"
stim = "*"

[tool.poetry.group.qcut.dependencies]
kahypar = "^1.1.7"
opt_einsum = "*"

[tool.poetry.group.qchem.dependencies]
openfermionpyscf = "*"
basis-set-exchange = "*"

[tool.poetry.group.data.dependencies]
h5py = "*"
aiohttp = "*"
fsspec = "*"
