[build-system]
requires = ["setuptools>=75.8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pennylane"
description = "PennyLane is a cross-platform Python library for quantum computing, quantum machine learning, and quantum chemistry. Train a quantum computer the same way as a neural network."
readme = "README.md"
license =  "Apache-2.0"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "scipy",
    "networkx",
    "rustworkx>=0.14.0",
    "autograd",
    "appdirs",
    "autoray==0.8.4",
    "cachetools",
    "pennylane-lightning>=0.44",
    "requests",
    "tomlkit",
    "typing_extensions",
    "packaging",
    "diastatic-malt",
    "numpy>=2.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
[dependency-groups]
ci = [
    "cvxpy",
    "cvxopt~=1.3.0; python_version < '3.14'",
    "matplotlib",
    "rich",
    "pandas",
    "build"
]
dev = [
    "pre-commit>=2.19.0",
    "pytest>=8.4.1",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.7.0",
    "pytest-xdist>=2.5.0",
    "pytest-rng",
    "flaky>=3.7.0",
    "pytest-forked>=1.4.0",
    "pytest-benchmark",
    "pytest-split",
    "tomlkit~=0.13",
    "rich>=13.7.1",
    "tach==0.32.2",
    "build",
    "pylint~=4.0.0",
    "isort~=7.0.0",
    "black==25.9.0",
    "matplotlib",
    "astroid==4.0.2"
]
docker = [
    "cvxpy~=1.2",
    "cvxopt~=1.3.0; python_version < '3.14'",
    "cachetools~=5.3.0", # this should be at least v5.3.0 because qualtran v0.6 (as of 2025/01/14) requires it, no known reason for why it cannot be anything higher.
    "matplotlib~=3.5",
    "opt_einsum~=3.3",
    "tach==0.32.2",
]
upload-reports = [
    "pydantic==2.10.6",
    "pydantic-settings==2.8.0",
    "requests==2.32.4",
]
[[project.maintainers]]
name = "Xanadu Quantum Technologies Inc."
email = "software@xanadu.ai"

[project.urls]
repository = "https://github.com/PennyLaneAI/pennylane"

[project.optional-dependencies]
kernels = ["cvxpy", "cvxopt"]
docs = [
    "jax==0.7.1",
    "jaxlib==0.7.1",
    "mistune==0.8.4",
    "m2r2",
    # TODO: Remove once galois becomes compatible with latest numpy 
    "numpy>=2.0,<=2.2",
    "pygments-github-lexers",
    "pyzx",
    "docutils==0.20",
    "sphinx==8.1",
    "sphinx-automodapi==0.19",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex==2.6.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "torch~=2.9.0",
    "tensornetwork==0.3",
    "jinja2>=3.1",
    "networkx==3.1",
    "pennylane-sphinx-theme",
    "tomli~=2.0.0",
    "sphinxext-opengraph==0.9.0",
    "sphinx-sitemap",
    "matplotlib==3.10.0",
    "galois",
    "requests==2.32.4"
]

[project.scripts]
pl-device-test = "pennylane.devices.tests:cli"

# TODO: rename entry point 'pennylane.plugins' to 'pennylane.devices'.
# This requires a rename in the setup file of all devices, and is best done during another refactor
[project.entry-points."pennylane.plugins"]
"default.qubit" = "pennylane.devices:DefaultQubit"
"default.gaussian" = "pennylane.devices:DefaultGaussian"
"default.mixed" = "pennylane.devices.default_mixed:DefaultMixed"
"reference.qubit" = "pennylane.devices.reference_qubit:ReferenceQubit"
"null.qubit" = "pennylane.devices.null_qubit:NullQubit"
"default.qutrit" = "pennylane.devices.default_qutrit:DefaultQutrit"
"default.clifford" = "pennylane.devices.default_clifford:DefaultClifford"
"default.qutrit.mixed" = "pennylane.devices.default_qutrit_mixed:DefaultQutritMixed"
"default.tensor" = "pennylane.devices.default_tensor:DefaultTensor"

[project.entry-points."console_scripts"]
"pl-device-test" = "pennylane.devices.tests:cli"

[tool.setuptools]
include-package-data = true
py-modules = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "pennylane._version.__version__"} 

[tool.setuptools_scm]

[tool.setuptools.package-data]
pennylane = ["devices/tests/pytest.ini", "drawer/plot.mplstyle"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
py_version = 311
profile = "black"
line_length = 100
known_third_party = ["autoray"]
known_first_party = ["pennylane"]
skip = ["__init__.py"]
filter_files = true

[tool.bandit]
targets = "pennylane"
exclude_dirs = ["tests", "pennylane/labs/tests"]
skips = [
    "B101", # We are okay with using asserts in source code as we do not compile optimized bytecode of pennylane
]
