[metadata]
name = PennyLane
version = 0.24.0-dev
maintainer = Xanadu Inc.
maintainer_email = software@xanadu.ai
license = Apache License 2.0
description = PennyLane is a Python quantum machine learning library by Xanadu Inc.
url = https://github.com/XanaduAI/pennylane
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
provides = pennylane

[options]
packages = find:
install_requires =
    numpy
    scipy
    networkx
    retworkx
    autograd
    toml
    appdirs
    semantic_version==2.6
    autoray>=0.3.1
    cachetools
    pennylane-lightning>=0.23
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
pennylane.plugins =
    default.qubit = pennylane.devices:DefaultQubit
    default.gaussian = pennylane.devices:DefaultGaussian
    default.qubit.tf = pennylane.devices.default_qubit_tf:DefaultQubitTF
    default.qubit.torch = pennylane.devices.default_qubit_torch:DefaultQubitTorch
    default.qubit.autograd = pennylane.devices.default_qubit_autograd:DefaultQubitAutograd
    default.qubit.jax = pennylane.devices.default_qubit_jax:DefaultQubitJax
    default.mixed = pennylane.devices.default_mixed:DefaultMixed
console_scripts =
    pl-device-test=pennylane.devices.tests:cli

[options.extras_require]
kernels = cvxpy; cvxopt

[options.package_data]
pennylane = devices/tests/pytest.ini
